v1.6.0/_sources/plc-kfe-vac_plc_kfe_vac_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.92.61.1.1
      -
    * - Target IP address
      - 172.21.92.61
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _plc_kfe_vac_pragmas:

Pragmas
-------

Total pragmas found: 90
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.4.2
        LCLS Vacuum, SLAC - LCLS, Unset, 1.9.0
        PMPS, SLAC - LCLS, Unset, 3.0.14
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.26.0
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, 3.3.54.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4392192 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 650862792 (8)
        Constants.bLittleEndian, BOOL, 641330936 (8)
        Constants.bSimulationMode, BOOL, 650862784 (8)
        Constants.CompilerVersion, VERSION, 650862720 (64)
        Constants.CompilerVersionNumeric, DWORD, 650862880 (32)
        Constants.gc_GaugeValidState, INT, 634595072 (16)
        Constants.gc_iSizeOfGGOArray, INT, 626225904 (16)
        Constants.nPackMode, UINT, 650862816 (16)
        Constants.nRegisterSize, WORD, 650862800 (16)
        Constants.RuntimeVersion, VERSION, 650862656 (64)
        Constants.RuntimeVersionNumeric, DWORD, 650862848 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4391360 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4391488 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4390480 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4391520 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>367 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4184608 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4184512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4184544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4184384 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4184480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4184320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4184576 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4184352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4184416 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4184448 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4184192 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4183968 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4184096 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4184160 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4184064 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4184224 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4184256 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4184032 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4184000 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4184128 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4183904 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4184288 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4183872 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4183936 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4184640 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4184672 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4185728 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4185664 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4185760 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4185792 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4185824 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4185856 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4185696 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4183760 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4183696 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4183824 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4183536 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4183808 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4183568 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4183520 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4183648 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4183840 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4183664 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4183680 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4183776 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4183552 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4183744 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4183600 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4183632 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4183712 (16)
        Global_Variables.ADSSTATE_START, UINT, 4183584 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4183616 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4183792 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4183728 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4251424 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4251456 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4251488 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4183232 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4182384 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4183456 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4183472 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4183344 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4183264 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4183328 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4183360 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4183280 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4183296 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4183312 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4183376 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4183392 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4183408 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4183424 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4183440 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4183248 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4183504 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4183488 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4392224 (16)
        Global_Variables.bEcFoeOpenFileNameWithFileExt, BOOL, 4182368 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4185896 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4185888 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4183856 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4182376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4183864 (8)
        Global_Variables.bSeqReadDrvAttrAndValue, BOOL, 4180504 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4393216 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4259104 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4264416 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4270688 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4270656 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4270624 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4270720 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4186624 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634616704 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4250168 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4188192 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4386960 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4386968 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634616640 (64)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO, UDINT, 4180736 (32)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO_LASTERROR, UDINT, 4180768 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE, UDINT, 4180384 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE_LASTERROR, UDINT, 4180416 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FCLOSE, UDINT, 4180576 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENREAD, UDINT, 4180512 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENWRITE, UDINT, 4180544 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FREAD, UDINT, 4180608 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FWRITE, UDINT, 4180640 (32)
        Global_Variables.EC_ADS_IGRP_FOE_LASTERROR, UDINT, 4180704 (32)
        Global_Variables.EC_ADS_IGRP_FOE_PROGRESSINFO, UDINT, 4180672 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_FRAME, UDINT, 4180352 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_SLAVE, UDINT, 4179968 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_DEVICESTATE, UDINT, 4180320 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SENDCMD, UDINT, 4180128 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ABNORMAL_STATE_CHANGES, UDINT, 4180256 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ADDRESSES, UDINT, 4180096 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_CRC, UDINT, 4180224 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_IDENTITY, UDINT, 4180192 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_SETPRESENT_CHANGES, UDINT, 4180288 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_STATEMACHINE, UDINT, 4179840 (32)
        Global_Variables.EC_ADS_IGRP_SLAVE_STATEMACHINE, UDINT, 4180160 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_PORT, UDINT, 4180032 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_ROUTER, UDINT, 4180064 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_SLAVE, UDINT, 4180000 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_CURSTATE, UDINT, 4179872 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_INTERNALSTATE, UDINT, 4179936 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_REQSTATE, UDINT, 4179904 (32)
        Global_Variables.EC_AMSPORT_MASTER, UINT, 4179280 (16)
        Global_Variables.EC_CMD_TYPE_APRD, BYTE, 4096376 (8)
        Global_Variables.EC_CMD_TYPE_APRW, BYTE, 4179600 (8)
        Global_Variables.EC_CMD_TYPE_APWR, BYTE, 4097160 (8)
        Global_Variables.EC_CMD_TYPE_BRD, BYTE, 4179632 (8)
        Global_Variables.EC_CMD_TYPE_BRW, BYTE, 4179648 (8)
        Global_Variables.EC_CMD_TYPE_BWR, BYTE, 4179640 (8)
        Global_Variables.EC_CMD_TYPE_FPRD, BYTE, 4179608 (8)
        Global_Variables.EC_CMD_TYPE_FPRW, BYTE, 4179624 (8)
        Global_Variables.EC_CMD_TYPE_FPWR, BYTE, 4179616 (8)
        Global_Variables.EC_CMD_TYPE_LRD, BYTE, 4179656 (8)
        Global_Variables.EC_CMD_TYPE_LRW, BYTE, 4179672 (8)
        Global_Variables.EC_CMD_TYPE_LWR, BYTE, 4179664 (8)
        Global_Variables.EC_COE_PROTERR_ACCESS, UDINT, 4181376 (32)
        Global_Variables.EC_COE_PROTERR_BLK_SIZE, UDINT, 4181248 (32)
        Global_Variables.EC_COE_PROTERR_CCS_SCS, UDINT, 4181216 (32)
        Global_Variables.EC_COE_PROTERR_CRC, UDINT, 4181312 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE, UDINT, 4181792 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE1, UDINT, 4181824 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE2, UDINT, 4181856 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE, UDINT, 4181664 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE1, UDINT, 4181696 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE2, UDINT, 4181728 (32)
        Global_Variables.EC_COE_PROTERR_DICTIONARY, UDINT, 4182048 (32)
        Global_Variables.EC_COE_PROTERR_GENERAL, UDINT, 4181920 (32)
        Global_Variables.EC_COE_PROTERR_HARDWARE, UDINT, 4181632 (32)
        Global_Variables.EC_COE_PROTERR_I_INCOMP, UDINT, 4181600 (32)
        Global_Variables.EC_COE_PROTERR_INDEX, UDINT, 4181472 (32)
        Global_Variables.EC_COE_PROTERR_MEMORY, UDINT, 4181344 (32)
        Global_Variables.EC_COE_PROTERR_MINMAX, UDINT, 4181888 (32)
        Global_Variables.EC_COE_PROTERR_OFFSET, UDINT, 4181760 (32)
        Global_Variables.EC_COE_PROTERR_P_INCOMP, UDINT, 4181568 (32)
        Global_Variables.EC_COE_PROTERR_PDO_LEN, UDINT, 4181536 (32)
        Global_Variables.EC_COE_PROTERR_PDO_MAP, UDINT, 4181504 (32)
        Global_Variables.EC_COE_PROTERR_READONLY, UDINT, 4181440 (32)
        Global_Variables.EC_COE_PROTERR_SEQNO, UDINT, 4181280 (32)
        Global_Variables.EC_COE_PROTERR_TIMEOUT, UDINT, 4181184 (32)
        Global_Variables.EC_COE_PROTERR_TOGGLE, UDINT, 4181152 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER, UDINT, 4181952 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER1, UDINT, 4181984 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER2, UDINT, 4182016 (32)
        Global_Variables.EC_COE_PROTERR_WRITEONLY, UDINT, 4181408 (32)
        Global_Variables.EC_DCTIME_DATEDELTA_OFFSET, DWORD, 4182080 (32)
        Global_Variables.EC_DCTIME_DELTA_OFFSET, T_ULARGE_INTEGER, 4182112 (64)
        Global_Variables.EC_DCTIME_DELTA_OFFSET64, ULINT, 4182400 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4182304 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY64, ULINT, 4182592 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4182176 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC64, ULINT, 4182464 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4182240 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC64, ULINT, 4182528 (64)
        Global_Variables.EC_DEVICE_STATE_BOOTSTRAP, BYTE, 4179704 (8)
        Global_Variables.EC_DEVICE_STATE_DISABLED, BYTE, 4179752 (8)
        Global_Variables.EC_DEVICE_STATE_ERROR, BYTE, 4179728 (8)
        Global_Variables.EC_DEVICE_STATE_INIT, BYTE, 4179688 (8)
        Global_Variables.EC_DEVICE_STATE_INITCMD_ERROR, BYTE, 4179744 (8)
        Global_Variables.EC_DEVICE_STATE_INVALID_VPRS, BYTE, 4179736 (8)
        Global_Variables.EC_DEVICE_STATE_MASK, BYTE, 4179680 (8)
        Global_Variables.EC_DEVICE_STATE_OP, BYTE, 4179720 (8)
        Global_Variables.EC_DEVICE_STATE_PREOP, BYTE, 4179696 (8)
        Global_Variables.EC_DEVICE_STATE_SAFEOP, BYTE, 4179712 (8)
        Global_Variables.EC_FOE_PROTERR_ACCESS, UDINT, 4180864 (32)
        Global_Variables.EC_FOE_PROTERR_BOOTSTRAPONLY, UDINT, 4181056 (32)
        Global_Variables.EC_FOE_PROTERR_DISKFULL, UDINT, 4180896 (32)
        Global_Variables.EC_FOE_PROTERR_EXISTS, UDINT, 4180992 (32)
        Global_Variables.EC_FOE_PROTERR_ILLEAGAL, UDINT, 4180928 (32)
        Global_Variables.EC_FOE_PROTERR_INVALIDPASSWORD, UDINT, 4181120 (32)
        Global_Variables.EC_FOE_PROTERR_NOTDEFINED, UDINT, 4180800 (32)
        Global_Variables.EC_FOE_PROTERR_NOTFOUND, UDINT, 4180832 (32)
        Global_Variables.EC_FOE_PROTERR_NOTINBOOTSTRAP, UDINT, 4181088 (32)
        Global_Variables.EC_FOE_PROTERR_NOUSER, UDINT, 4181024 (32)
        Global_Variables.EC_FOE_PROTERR_PACKENO, UDINT, 4180960 (32)
        Global_Variables.EC_LINK_STATE_ADDITIONAL_LINK, BYTE, 4179792 (8)
        Global_Variables.EC_LINK_STATE_LINK_WITHOUT_COMM, BYTE, 4179776 (8)
        Global_Variables.EC_LINK_STATE_MISSING_LINK, BYTE, 4179784 (8)
        Global_Variables.EC_LINK_STATE_NOT_PRESENT, BYTE, 4179768 (8)
        Global_Variables.EC_LINK_STATE_OK, BYTE, 4179760 (8)
        Global_Variables.EC_LINK_STATE_PORT_A, BYTE, 4179800 (8)
        Global_Variables.EC_LINK_STATE_PORT_B, BYTE, 4179808 (8)
        Global_Variables.EC_LINK_STATE_PORT_C, BYTE, 4179816 (8)
        Global_Variables.EC_LINK_STATE_PORT_D, BYTE, 4179824 (8)
        Global_Variables.EC_MAX_SLAVES, UINT, 4179584 (16)
        Global_Variables.EC_SOE_ELEMENT_ATTRIBUTE, BYTE, 4180456 (8)
        Global_Variables.EC_SOE_ELEMENT_DATASTATE, BYTE, 4179832 (8)
        Global_Variables.EC_SOE_ELEMENT_DEFAULT, BYTE, 4180496 (8)
        Global_Variables.EC_SOE_ELEMENT_MAX, BYTE, 4180480 (8)
        Global_Variables.EC_SOE_ELEMENT_MIN, BYTE, 4180472 (8)
        Global_Variables.EC_SOE_ELEMENT_NAME, BYTE, 4180448 (8)
        Global_Variables.EC_SOE_ELEMENT_UNIT, BYTE, 4180464 (8)
        Global_Variables.EC_SOE_ELEMENT_VALUE, BYTE, 4180488 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4252064 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4390088 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4389792 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4389664 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4250176 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4186544 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634596256 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4251536 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4251520 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4251552 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4251568 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4251584 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4251904 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4251680 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4252000 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4251776 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4251968 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4252032 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4251616 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4251648 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4251840 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4251744 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4251872 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4251936 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4251808 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4251712 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4185984 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4186048 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4186016 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4185920 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4186080 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4185952 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4252416 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4252160 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4251504 (16)
        Global_Variables.g_DummyVG, ST_VG, 634595200 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634595088 (16)
        Global_Variables.g_stSystem, ST_System, 634595104 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4188160 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4187208 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4188128 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4188144 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4251392 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4249856 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4249888 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4393152 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4393184 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4249760 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4249728 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4249696 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4187216 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4249920 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4188208 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4250144 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4188200 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4250160 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4186656 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4393248 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4250152 (8)
        Global_Variables.nWatchdogTime, BYTE, 4187200 (8)
        Global_Variables.PI, LREAL, 4186560 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4250080 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4250112 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4250048 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4249952 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4185472 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4184832 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4184800 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4249984 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4250016 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4184896 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4185216 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4185184 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4251360 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4185056 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4184864 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4185152 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4185088 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4184928 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4185248 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4185120 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4184992 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4185024 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4184960 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4249792 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4249824 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4185280 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4184704 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4184736 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4184768 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4185344 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4185312 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4185376 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4185440 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4185408 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4185904 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4185912 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4259040 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4259392 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4258976 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4259328 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4258752 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4257904 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4258288 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4258912 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4259264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4258784 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4259136 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4258848 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4259200 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634596416 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4186528 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4186512 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4186416 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4186352 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4186368 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4186384 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4186336 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4186400 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4186480 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4186432 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4186464 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4186496 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4186448 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634609632 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4392544 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4392288 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4392256 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4392480 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4392512 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4392352 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4392384 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4392416 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4392320 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4392448 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4392800 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4392672 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4392640 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4392576 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4392736 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4392768 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4392608 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4392704 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4393696 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4393280 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4185600 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4185504 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4185568 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4185536 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4185632 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4259456 (864)

.. raw:: html

   </details>
   <br />


Global_Variables_EtherCAT
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables_EtherCAT.ESC_MAX_PORTS, UINT, 4179264 (16)
        Global_Variables_EtherCAT.iSLAVEADDR_ARR_SIZE, UINT, 4097168 (16)


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 634617056 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4179296 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4390496 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634616768 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634609344 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4390784 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4391072 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4182656 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4182944 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4187840 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4391776 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4394112 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4187232 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634594784 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4391712 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4392064 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81984)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4179200 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4179232 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4394448 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4394432 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4394416 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4394400 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4392240 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4396544 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4394464 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4394440 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4394496 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634596384 (16)


GVL_SXR_VAC
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>207 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SXR_VAC.fb_AT1K0_GAS_VGC_1, FB_VGC, 637370624 (177344)
        GVL_SXR_VAC.fb_AT1K0_GAS_VGC_1.i_xClsLS, BOOL, 637547848 (8)
        GVL_SXR_VAC.fb_AT1K0_GAS_VGC_1.i_xOpnLS, BOOL, 637547840 (8)
        GVL_SXR_VAC.fb_AT1K0_GAS_VGC_1.q_xOPN_DO, BOOL, 637547856 (8)
        GVL_SXR_VAC.fb_EM1K0_GMD_VGC_1, FB_VGC, 637193280 (177344)
        GVL_SXR_VAC.fb_EM1K0_GMD_VGC_1.i_xClsLS, BOOL, 637370504 (8)
        GVL_SXR_VAC.fb_EM1K0_GMD_VGC_1.i_xOpnLS, BOOL, 637370496 (8)
        GVL_SXR_VAC.fb_EM1K0_GMD_VGC_1.q_xOPN_DO, BOOL, 637370512 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_1, FB_VGC, 637547968 (177344)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_1.i_xClsLS, BOOL, 637725192 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_1.i_xOpnLS, BOOL, 637725184 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_1.q_xOPN_DO, BOOL, 637725200 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_2, FB_VGC, 637725312 (177344)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_2.i_xClsLS, BOOL, 637902536 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_2.i_xOpnLS, BOOL, 637902528 (8)
        GVL_SXR_VAC.fb_EM2K0_XGMD_VGC_2.q_xOPN_DO, BOOL, 637902544 (8)
        GVL_SXR_VAC.fb_IM1K0_XTES_GCC_1, FB_MKS422, 635957248 (88064)
        GVL_SXR_VAC.fb_IM1K0_XTES_GCC_1.i_iPRESS_R, INT, 636044992 (16)
        GVL_SXR_VAC.fb_IM1K0_XTES_GCC_1.q_xHV_DIS, BOOL, 636045008 (8)
        GVL_SXR_VAC.fb_IM1K0_XTES_GPI_1, FB_MKS317, 634915264 (86720)
        GVL_SXR_VAC.fb_IM1K0_XTES_GPI_1.i_iPRESS_R, INT, 635001696 (16)
        GVL_SXR_VAC.fb_IM1K0_XTES_VGC_1, FB_VGC, 639321408 (177344)
        GVL_SXR_VAC.fb_IM1K0_XTES_VGC_1.i_xClsLS, BOOL, 639498632 (8)
        GVL_SXR_VAC.fb_IM1K0_XTES_VGC_1.i_xOpnLS, BOOL, 639498624 (8)
        GVL_SXR_VAC.fb_IM1K0_XTES_VGC_1.q_xOPN_DO, BOOL, 639498640 (8)
        GVL_SXR_VAC.fb_IM1K3_PPM_VGC_1, FB_VGC, 638789376 (177344)
        GVL_SXR_VAC.fb_IM1K3_PPM_VGC_1.i_xClsLS, BOOL, 638966600 (8)
        GVL_SXR_VAC.fb_IM1K3_PPM_VGC_1.i_xOpnLS, BOOL, 638966592 (8)
        GVL_SXR_VAC.fb_IM1K3_PPM_VGC_1.q_xOPN_DO, BOOL, 638966608 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_GCC_1, FB_MKS500, 636485632 (88384)
        GVL_SXR_VAC.fb_MR1K1_BEND_GCC_1.i_iPRESS_R, INT, 636573616 (16)
        GVL_SXR_VAC.fb_MR1K1_BEND_GCC_1.i_xDisc_Active, BOOL, 636573648 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_GCC_1.i_xHV_ON, BOOL, 636573640 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_GCC_1.q_xHV_DIS, BOOL, 636573632 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_GPI_1, FB_MKS275, 635348864 (86720)
        GVL_SXR_VAC.fb_MR1K1_BEND_GPI_1.i_iPRESS_R, INT, 635435328 (16)
        GVL_SXR_VAC.fb_MR1K1_BEND_PIP_1, FB_PIP_Gamma, 640313088 (90624)
        GVL_SXR_VAC.fb_MR1K1_BEND_PIP_1.i_iPRESS, INT, 640399792 (16)
        GVL_SXR_VAC.fb_MR1K1_BEND_PIP_1.i_xSP_DI, BOOL, 640399808 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_PIP_1.q_xHVEna_DO, BOOL, 640399776 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_VGC_1, FB_VGC, 638080000 (177344)
        GVL_SXR_VAC.fb_MR1K1_BEND_VGC_1.i_xClsLS, BOOL, 638257224 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_VGC_1.i_xOpnLS, BOOL, 638257216 (8)
        GVL_SXR_VAC.fb_MR1K1_BEND_VGC_1.q_xOPN_DO, BOOL, 638257232 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_GCC_1, FB_MKS500, 636574016 (88384)
        GVL_SXR_VAC.fb_MR1K3_TXI_GCC_1.i_iPRESS_R, INT, 636662000 (16)
        GVL_SXR_VAC.fb_MR1K3_TXI_GCC_1.i_xDisc_Active, BOOL, 636662032 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_GCC_1.i_xHV_ON, BOOL, 636662024 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_GCC_1.q_xHV_DIS, BOOL, 636662016 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_GPI_1, FB_MKS275, 635435584 (86720)
        GVL_SXR_VAC.fb_MR1K3_TXI_GPI_1.i_iPRESS_R, INT, 635522048 (16)
        GVL_SXR_VAC.fb_MR1K3_TXI_PIP_1, FB_PIP_Gamma, 640403712 (90624)
        GVL_SXR_VAC.fb_MR1K3_TXI_PIP_1.i_iPRESS, INT, 640490416 (16)
        GVL_SXR_VAC.fb_MR1K3_TXI_PIP_1.i_xSP_DI, BOOL, 640490432 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_PIP_1.q_xHVEna_DO, BOOL, 640490400 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_VGC_1, FB_VGC, 638257344 (177344)
        GVL_SXR_VAC.fb_MR1K3_TXI_VGC_1.i_xClsLS, BOOL, 638434568 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_VGC_1.i_xOpnLS, BOOL, 638434560 (8)
        GVL_SXR_VAC.fb_MR1K3_TXI_VGC_1.q_xOPN_DO, BOOL, 638434576 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GCC_1, FB_MKS500, 636927552 (88384)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GCC_1.i_iPRESS_R, INT, 637015536 (16)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GCC_1.i_xDisc_Active, BOOL, 637015568 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GCC_1.i_xHV_ON, BOOL, 637015560 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GCC_1.q_xHV_DIS, BOOL, 637015552 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GPI_1, FB_MKS275, 635782464 (86720)
        GVL_SXR_VAC.fb_MR1K4_SOMS_GPI_1.i_iPRESS_R, INT, 635868928 (16)
        GVL_SXR_VAC.fb_MR1K4_SOMS_VGC_1, FB_VGC, 639144064 (177344)
        GVL_SXR_VAC.fb_MR1K4_SOMS_VGC_1.i_xClsLS, BOOL, 639321288 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_VGC_1.i_xOpnLS, BOOL, 639321280 (8)
        GVL_SXR_VAC.fb_MR1K4_SOMS_VGC_1.q_xOPN_DO, BOOL, 639321296 (8)
        GVL_SXR_VAC.fb_MR2K3_TXI_GCC_1, FB_MKS500, 636662400 (88384)
        GVL_SXR_VAC.fb_MR2K3_TXI_GCC_1.i_iPRESS_R, INT, 636750384 (16)
        GVL_SXR_VAC.fb_MR2K3_TXI_GCC_1.i_xDisc_Active, BOOL, 636750416 (8)
        GVL_SXR_VAC.fb_MR2K3_TXI_GCC_1.i_xHV_ON, BOOL, 636750408 (8)
        GVL_SXR_VAC.fb_MR2K3_TXI_GCC_1.q_xHV_DIS, BOOL, 636750400 (8)
        GVL_SXR_VAC.fb_MR2K3_TXI_GPI_1, FB_MKS275, 635522304 (86720)
        GVL_SXR_VAC.fb_MR2K3_TXI_GPI_1.i_iPRESS_R, INT, 635608768 (16)
        GVL_SXR_VAC.fb_MR2K3_TXI_PIP_1, FB_PIP_Gamma, 640494336 (90624)
        GVL_SXR_VAC.fb_MR2K3_TXI_PIP_1.i_iPRESS, INT, 640581040 (16)
        GVL_SXR_VAC.fb_MR2K3_TXI_PIP_1.i_xSP_DI, BOOL, 640581056 (8)
        GVL_SXR_VAC.fb_MR2K3_TXI_PIP_1.q_xHVEna_DO, BOOL, 640581024 (8)
        GVL_SXR_VAC.fb_PA1K0, FB_PIP_Gamma, 640222464 (90624)
        GVL_SXR_VAC.fb_PA1K0.i_iPRESS, INT, 640309168 (16)
        GVL_SXR_VAC.fb_PA1K0.i_xSP_DI, BOOL, 640309184 (8)
        GVL_SXR_VAC.fb_PA1K0.q_xHVEna_DO, BOOL, 640309152 (8)
        GVL_SXR_VAC.fb_PA1K0_GCC_1, FB_MKS422, 636397568 (88064)
        GVL_SXR_VAC.fb_PA1K0_GCC_1.i_iPRESS_R, INT, 636485312 (16)
        GVL_SXR_VAC.fb_PA1K0_GCC_1.q_xHV_DIS, BOOL, 636485328 (8)
        GVL_SXR_VAC.fb_PA1K0_GPI_1, FB_MKS317, 635262144 (86720)
        GVL_SXR_VAC.fb_PA1K0_GPI_1.i_iPRESS_R, INT, 635348576 (16)
        GVL_SXR_VAC.fb_PA1K0_PIP_1, FB_PIP_Gamma, 640131840 (90624)
        GVL_SXR_VAC.fb_PA1K0_PIP_1.i_iPRESS, INT, 640218544 (16)
        GVL_SXR_VAC.fb_PA1K0_PIP_1.i_xSP_DI, BOOL, 640218560 (8)
        GVL_SXR_VAC.fb_PA1K0_PIP_1.q_xHVEna_DO, BOOL, 640218528 (8)
        GVL_SXR_VAC.fb_PCPM3B_GFS_1, FB_MKS422, 636045312 (88064)
        GVL_SXR_VAC.fb_PCPM3B_GFS_1.i_iPRESS_R, INT, 636133056 (16)
        GVL_SXR_VAC.fb_PCPM3B_GFS_1.q_xHV_DIS, BOOL, 636133072 (8)
        GVL_SXR_VAC.fb_PCPM3B_PIP_1, FB_PIP_Gamma, 640041216 (90624)
        GVL_SXR_VAC.fb_PCPM3B_PIP_1.i_iPRESS, INT, 640127920 (16)
        GVL_SXR_VAC.fb_PCPM3B_PIP_1.i_xSP_DI, BOOL, 640127936 (8)
        GVL_SXR_VAC.fb_PCPM3B_PIP_1.q_xHVEna_DO, BOOL, 640127904 (8)
        GVL_SXR_VAC.fb_RTDSK0_GCC_1, FB_MKS422, 635869184 (88064)
        GVL_SXR_VAC.fb_RTDSK0_GCC_1.i_iPRESS_R, INT, 635956928 (16)
        GVL_SXR_VAC.fb_RTDSK0_GCC_1.q_xHV_DIS, BOOL, 635956944 (8)
        GVL_SXR_VAC.fb_RTDSK0_GPI_1, FB_MKS317, 634828544 (86720)
        GVL_SXR_VAC.fb_RTDSK0_GPI_1.i_iPRESS_R, INT, 634914976 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_1, FB_PIP_Gamma, 639588096 (90624)
        GVL_SXR_VAC.fb_RTDSK0_PIP_1.i_iPRESS, INT, 639674800 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_1.i_xSP_DI, BOOL, 639674816 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_1.q_xHVEna_DO, BOOL, 639674784 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_2, FB_PIP_Gamma, 639678720 (90624)
        GVL_SXR_VAC.fb_RTDSK0_PIP_2.i_iPRESS, INT, 639765424 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_2.i_xSP_DI, BOOL, 639765440 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_2.q_xHVEna_DO, BOOL, 639765408 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_3, FB_PIP_Gamma, 639769344 (90624)
        GVL_SXR_VAC.fb_RTDSK0_PIP_3.i_iPRESS, INT, 639856048 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_3.i_xSP_DI, BOOL, 639856064 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_3.q_xHVEna_DO, BOOL, 639856032 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_4, FB_PIP_Gamma, 639859968 (90624)
        GVL_SXR_VAC.fb_RTDSK0_PIP_4.i_iPRESS, INT, 639946672 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_4.i_xSP_DI, BOOL, 639946688 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_4.q_xHVEna_DO, BOOL, 639946656 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_5, FB_PIP_Gamma, 639950592 (90624)
        GVL_SXR_VAC.fb_RTDSK0_PIP_5.i_iPRESS, INT, 640037296 (16)
        GVL_SXR_VAC.fb_RTDSK0_PIP_5.i_xSP_DI, BOOL, 640037312 (8)
        GVL_SXR_VAC.fb_RTDSK0_PIP_5.q_xHVEna_DO, BOOL, 640037280 (8)
        GVL_SXR_VAC.fb_RTDSK0_VGC_1, FB_VGC, 637015936 (177344)
        GVL_SXR_VAC.fb_RTDSK0_VGC_1.i_xClsLS, BOOL, 637193160 (8)
        GVL_SXR_VAC.fb_RTDSK0_VGC_1.i_xOpnLS, BOOL, 637193152 (8)
        GVL_SXR_VAC.fb_RTDSK0_VGC_1.q_xOPN_DO, BOOL, 637193168 (8)
        GVL_SXR_VAC.fb_SL1K0_PIP_1, FB_PIP_Gamma, 640856832 (90624)
        GVL_SXR_VAC.fb_SL1K0_PIP_1.i_iPRESS, INT, 640943536 (16)
        GVL_SXR_VAC.fb_SL1K0_PIP_1.i_xSP_DI, BOOL, 640943552 (8)
        GVL_SXR_VAC.fb_SL1K0_PIP_1.q_xHVEna_DO, BOOL, 640943520 (8)
        GVL_SXR_VAC.fb_SL1K0_POWER_GCC_1, FB_MKS422, 636133376 (88064)
        GVL_SXR_VAC.fb_SL1K0_POWER_GCC_1.i_iPRESS_R, INT, 636221120 (16)
        GVL_SXR_VAC.fb_SL1K0_POWER_GCC_1.q_xHV_DIS, BOOL, 636221136 (8)
        GVL_SXR_VAC.fb_SL1K0_POWER_GPI_1, FB_MKS317, 635001984 (86720)
        GVL_SXR_VAC.fb_SL1K0_POWER_GPI_1.i_iPRESS_R, INT, 635088416 (16)
        GVL_SXR_VAC.fb_SP1K1_MONO_GCC_1, FB_MKS500, 636750784 (88384)
        GVL_SXR_VAC.fb_SP1K1_MONO_GCC_1.i_iPRESS_R, INT, 636838768 (16)
        GVL_SXR_VAC.fb_SP1K1_MONO_GCC_1.i_xDisc_Active, BOOL, 636838800 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_GCC_1.i_xHV_ON, BOOL, 636838792 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_GCC_1.q_xHV_DIS, BOOL, 636838784 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_GPI_1, FB_MKS275, 635609024 (86720)
        GVL_SXR_VAC.fb_SP1K1_MONO_GPI_1.i_iPRESS_R, INT, 635695488 (16)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_1, FB_PIP_Gamma, 640584960 (90624)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_1.i_iPRESS, INT, 640671664 (16)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_1.i_xSP_DI, BOOL, 640671680 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_1.q_xHVEna_DO, BOOL, 640671648 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_2, FB_PIP_Gamma, 640675584 (90624)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_2.i_iPRESS, INT, 640762288 (16)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_2.i_xSP_DI, BOOL, 640762304 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_PIP_2.q_xHVEna_DO, BOOL, 640762272 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_1, FB_VGC, 638434688 (177344)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_1.i_xClsLS, BOOL, 638611912 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_1.i_xOpnLS, BOOL, 638611904 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_1.q_xOPN_DO, BOOL, 638611920 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_2, FB_VGC, 638612032 (177344)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_2.i_xClsLS, BOOL, 638789256 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_2.i_xOpnLS, BOOL, 638789248 (8)
        GVL_SXR_VAC.fb_SP1K1_MONO_VGC_2.q_xOPN_DO, BOOL, 638789264 (8)
        GVL_SXR_VAC.fb_TV2K0_GCC_1, FB_MKS422, 636221440 (88064)
        GVL_SXR_VAC.fb_TV2K0_GCC_1.i_iPRESS_R, INT, 636309184 (16)
        GVL_SXR_VAC.fb_TV2K0_GCC_1.q_xHV_DIS, BOOL, 636309200 (8)
        GVL_SXR_VAC.fb_TV2K0_GCC_2, FB_MKS422, 636309504 (88064)
        GVL_SXR_VAC.fb_TV2K0_GCC_2.i_iPRESS_R, INT, 636397248 (16)
        GVL_SXR_VAC.fb_TV2K0_GCC_2.q_xHV_DIS, BOOL, 636397264 (8)
        GVL_SXR_VAC.fb_TV2K0_GPI_1, FB_MKS317, 635088704 (86720)
        GVL_SXR_VAC.fb_TV2K0_GPI_1.i_iPRESS_R, INT, 635175136 (16)
        GVL_SXR_VAC.fb_TV2K0_GPI_2, FB_MKS317, 635175424 (86720)
        GVL_SXR_VAC.fb_TV2K0_GPI_2.i_iPRESS_R, INT, 635261856 (16)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface, FB_VFS_Interface, 639498752 (89344)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_eVFS_State, E_VGC, 639588032 (16)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_xMPS_OK, BOOL, 639588024 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_xTrigger, BOOL, 639588000 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_xVAC_FAULT_OK, BOOL, 639587184 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_xVFS_Closed, BOOL, 639588016 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.i_xVFS_Open, BOOL, 639588008 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.iq_stValve.xCLS_SW, BOOL, 639585864 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xCLS_SW, BOOL, 639587952 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xOPN_SW, BOOL, 639587944 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xOverrideMode, BOOL, 639587968 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xOverrideOpen, BOOL, 639587976 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xPRESS_OK, BOOL, 639587936 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xVAC_FAULT_Reset, BOOL, 639587960 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xVetoValveClosed, BOOL, 639587992 (8)
        GVL_SXR_VAC.fb_TV2K0_VFS_1_Interface.q_xVetoValveOpenDO, BOOL, 639587984 (8)
        GVL_SXR_VAC.fb_TV2K0_VGC_1, FB_VGC, 637902656 (177344)
        GVL_SXR_VAC.fb_TV2K0_VGC_1.i_xClsLS, BOOL, 638079880 (8)
        GVL_SXR_VAC.fb_TV2K0_VGC_1.i_xOpnLS, BOOL, 638079872 (8)
        GVL_SXR_VAC.fb_TV2K0_VGC_1.q_xOPN_DO, BOOL, 638079888 (8)
        GVL_SXR_VAC.fb_TV3K0_GCC_1, FB_MKS500, 636839168 (88384)
        GVL_SXR_VAC.fb_TV3K0_GCC_1.i_iPRESS_R, INT, 636927152 (16)
        GVL_SXR_VAC.fb_TV3K0_GCC_1.i_xDisc_Active, BOOL, 636927184 (8)
        GVL_SXR_VAC.fb_TV3K0_GCC_1.i_xHV_ON, BOOL, 636927176 (8)
        GVL_SXR_VAC.fb_TV3K0_GCC_1.q_xHV_DIS, BOOL, 636927168 (8)
        GVL_SXR_VAC.fb_TV3K0_GPI_1, FB_MKS275, 635695744 (86720)
        GVL_SXR_VAC.fb_TV3K0_GPI_1.i_iPRESS_R, INT, 635782208 (16)
        GVL_SXR_VAC.fb_TV3K0_PIP_1, FB_PIP_Gamma, 640766208 (90624)
        GVL_SXR_VAC.fb_TV3K0_PIP_1.i_iPRESS, INT, 640852912 (16)
        GVL_SXR_VAC.fb_TV3K0_PIP_1.i_xSP_DI, BOOL, 640852928 (8)
        GVL_SXR_VAC.fb_TV3K0_PIP_1.q_xHVEna_DO, BOOL, 640852896 (8)
        GVL_SXR_VAC.fb_TV3K0_VGC_1, FB_VGC, 638966720 (177344)
        GVL_SXR_VAC.fb_TV3K0_VGC_1.i_xClsLS, BOOL, 639143944 (8)
        GVL_SXR_VAC.fb_TV3K0_VGC_1.i_xOpnLS, BOOL, 639143936 (8)
        GVL_SXR_VAC.fb_TV3K0_VGC_1.q_xOPN_DO, BOOL, 639143952 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626273920 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 626257920 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 626223784 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626223840 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626223808 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626223792 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626225888 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4396576 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626225920 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 626223776 (8)


GVL_VAC_INTF
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>21 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VAC_INTF.fb_AT1K0_GAS_GCC_10_reader, FB_TGCC_ADS, 641143104 (93888)
        GVL_VAC_INTF.fb_AT1K0_GAS_GCC_140_reader, FB_TGCC_ADS, 641236992 (93888)
        GVL_VAC_INTF.fb_EM1K0_GMD_GCC_10_reader, FB_TGCC_ADS, 640955328 (93888)
        GVL_VAC_INTF.fb_EM1K0_GMD_GCC_70_reader, FB_TGCC_ADS, 641049216 (93888)
        GVL_VAC_INTF.fb_EM2K0_XGMD_GCC_10_reader, FB_TGCC_ADS, 641330944 (93888)
        GVL_VAC_INTF.fb_EM2K0_XGMD_GCC_90_reader, FB_TGCC_ADS, 641424832 (93888)
        GVL_VAC_INTF.fb_PC1K1_INTF_GCC_1, FB_EXT_TREATY_GAUGE, 640954080 (1184)
        GVL_VAC_INTF.fb_PC1K1_INTF_GCC_1.i_xEXT_Press_OK, BOOL, 640955240 (8)
        GVL_VAC_INTF.fb_RTDSK0_INTF_VGC_1, FB_EXT_TREATY_VGC, 640948640 (3008)
        GVL_VAC_INTF.fb_RTDSK0_INTF_VGC_1.q_xTREATY_VGC_STATUS, BOOL, 640951616 (8)
        GVL_VAC_INTF.fb_TMO_ILK_Lower, FB_EXT_ILK, 640952928 (1152)
        GVL_VAC_INTF.fb_TMO_ILK_Lower.q_xILK_OK_DO, BOOL, 640954048 (8)
        GVL_VAC_INTF.fb_TMO_ILK_Uppper, FB_EXT_ILK, 640951776 (1152)
        GVL_VAC_INTF.fb_TMO_ILK_Uppper.q_xILK_OK_DO, BOOL, 640952896 (8)
        GVL_VAC_INTF.fb_TV1K0_INTF_GCC_1, FB_EXT_TREATY_GAUGE, 640947456 (1184)
        GVL_VAC_INTF.fb_TV1K0_INTF_GCC_1.i_xEXT_Press_OK, BOOL, 640948616 (8)
        GVL_VAC_INTF.n_AT1K0_VAC_counter, UDINT, 640955296 (32)
        GVL_VAC_INTF.n_EM1K0_VAC_counter, UDINT, 640955264 (32)
        GVL_VAC_INTF.n_EM2K0_VAC_counter, UDINT, 641330880 (32)
        GVL_VAC_INTF.st_TMO_ILK_Lower, ST_EXT_ILK, 640951712 (64)
        GVL_VAC_INTF.st_TMO_ILK_Upper, ST_EXT_ILK, 640951648 (64)

.. raw:: html

   </details>
   <br />


GVL_Variables
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>29 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Variables.fbEcatDiagWrapper, FB_EcatDiagWrapper, 649180096 (1096320)
        GVL_Variables.fbEcatDiagWrapper.arrEcMasterNetId, T_AmsNetIdArr, 650263856 (48)
        GVL_Variables.fbEcatDiagWrapper.nEcMasterDeviceId, UINT, 650263840 (16)
        GVL_Variables.fbEcatDiagWrapper.nEcMasterDevState, UINT, 650263824 (16)
        GVL_Variables.fbEcatDiagWrapper.nEcMasterSlaveCount, UINT, 650263808 (16)
        GVL_Variables.fbEcatDiagWrapper.nEcMasterSlaveCountCfg, UINT, 650264096 (16)
        GVL_Variables.fbEcatDiagWrapper.wFrmXWcState, WORD, 649180512 (16)
        GVL_Variables.fbLogHandler, FB_LogHandler, 643398080 (5782016)
        GVL_Variables.g_FastFault, FB_FastFault, 643372992 (25088)
        GVL_Variables.g_FastFaultOutput2, FB_HardwareFFOutput, 642843200 (264896)
        GVL_Variables.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 642843464 (8)
        GVL_Variables.g_FastFaultOutputAll, FB_HardwareFFOutput, 642578304 (264896)
        GVL_Variables.g_FastFaultOutputAll.q_xFastFaultOut, BOOL, 642578568 (8)
        GVL_Variables.g_FastFaultOutputINTF, FB_HardwareFFOutput, 643108096 (264896)
        GVL_Variables.g_FastFaultOutputINTF.q_xFastFaultOut, BOOL, 643108360 (8)
        GVL_Variables.g_FastFaultOutputK0, FB_HardwareFFOutput, 641518720 (264896)
        GVL_Variables.g_FastFaultOutputK0.q_xFastFaultOut, BOOL, 641518984 (8)
        GVL_Variables.g_FastFaultOutputK2, FB_HardwareFFOutput, 641783616 (264896)
        GVL_Variables.g_FastFaultOutputK2.q_xFastFaultOut, BOOL, 641783880 (8)
        GVL_Variables.g_FastFaultOutputK3, FB_HardwareFFOutput, 642048512 (264896)
        GVL_Variables.g_FastFaultOutputK3.q_xFastFaultOut, BOOL, 642048776 (8)
        GVL_Variables.g_FastFaultOutputK4, FB_HardwareFFOutput, 642313408 (264896)
        GVL_Variables.g_FastFaultOutputK4.q_xFastFaultOut, BOOL, 642313672 (8)
        GVL_Variables.g_fbArbiter1, FB_Arbiter, 650276416 (474624)
        GVL_Variables.xReset_PMPS_FFO_K0, BOOL, 634595192 (8)
        GVL_Variables.xReset_PMPS_FFO_K2, BOOL, 634688664 (8)
        GVL_Variables.xReset_PMPS_FFO_K3, BOOL, 641330912 (8)
        GVL_Variables.xReset_PMPS_FFO_K4, BOOL, 641330920 (8)
        GVL_Variables.xSystemOverrideMode, BOOL, 626223800 (8)

.. raw:: html

   </details>
   <br />


GVL_VFS
^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VFS.fb_TV2K0_VFS_1, FB_VFS, 650751040 (111616)
        GVL_VFS.fb_TV2K0_VFS_1.i_xCLS_SW, BOOL, 650862520 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xClsLS, BOOL, 650862440 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xOPN_SW, BOOL, 650862512 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xOpnLS, BOOL, 650862432 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xOverrideMode, BOOL, 650862536 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xOverrideOpen, BOOL, 650862544 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xPress_OK, BOOL, 650862504 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xTrigger, BOOL, 650862480 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xVAC_FAULT_Reset, BOOL, 650862528 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xVetoValveClosed, BOOL, 650862496 (8)
        GVL_VFS.fb_TV2K0_VFS_1.i_xVetoValveOpenDO, BOOL, 650862488 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_eVFS_State, E_VGC, 650862592 (16)
        GVL_VFS.fb_TV2K0_VFS_1.q_xClose_A, BOOL, 650862448 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xClose_B, BOOL, 650862456 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xClose_C, BOOL, 650862464 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xMPS_OK, BOOL, 650862584 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xOPN_DO, BOOL, 650862472 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xTrigger, BOOL, 650862552 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xVAC_FAULT_OK, BOOL, 650862576 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xVFS_Closed, BOOL, 650862568 (8)
        GVL_VFS.fb_TV2K0_VFS_1.q_xVFS_Open, BOOL, 650862560 (8)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634595144 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.fbGetCurTaskIdx, GETCURTASKINDEX, 634666816 (128)
        MAIN.fbWritePersistentData, WritePersistentData, 634666944 (1600)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4391744 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634596400 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634602256 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634604096 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634602336 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634605888 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634602016 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634602112 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634600960 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634607968 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634606944 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634605872 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634605856 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634602176 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634602240 (16)
        PMPS_GVL.PERange, PE_Ranges, 634601984 (32)
        PMPS_GVL.reVHyst, REAL, 634606912 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634602272 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634599200 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634597440 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634602208 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634602048 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634609024 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634608992 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634609056 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634609088 (256)


PRG_DIAGNOSTIC
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DIAGNOSTIC.fbTime, FB_LocalSystemTime, 634668704 (19040)
        PRG_DIAGNOSTIC.logTimer, TON, 634687744 (224)
        PRG_DIAGNOSTIC.plcHeartbeat, UDINT, 634688096 (32)
        PRG_DIAGNOSTIC.plcInfo, STRING(40), 634688128 (328)
        PRG_DIAGNOSTIC.plcLocalTime, STRING(25), 634688456 (208)
        PRG_DIAGNOSTIC.plcName, STRING(15), 634687968 (128)
        PRG_DIAGNOSTIC.simHeartbeat, UINT, 634609008 (16)


PRG_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 634689280 (138752)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 634690080 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 634691840 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 634693601 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 634693600 (1)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 650913792 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 650913280 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 650913408 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 650913536 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 650913152 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 650913664 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 650899520 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__FSV_task, _Implicit_Task_Info, 650867136 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 650867840 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 650862912 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 650864960 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_FSV_task, OTCID, 650867040 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 650867104 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_FSV_task, OTCID, 650867008 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 650867072 (32)


